# intent

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
fixtures/: episode_aloha_coffee_004.parquet
monty_demo/: __init__.py  _io.py  _timing.py  encode.py  episode.py  intent.py  kg.py  reason.py  schemas.py  segment.py
notebooks/: demo.ipynb
scripts/: build_fixture.py
tests/: test_encode_segment.py  test_kg.py  test_pipeline.py  test_reason.py
