[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monty_demo"
version = "0.1.0"
description = "Reasoning layer for physical-AI teleop data — pitch artifact for usemonty.com"
requires-python = ">=3.11"
dependencies = [
    "huggingface_hub>=0.24",
    "numpy>=1.26",
    "pandas>=2.1",
    "networkx>=3.2",
    "pydantic>=2.6",
    "pyarrow>=15",
]

[project.optional-dependencies]
notebook = ["matplotlib>=3.8", "jupyter>=1.0"]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["monty_demo*"]
exclude = ["tests*", "notebooks*", "scripts*", "fixtures*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"